<resources>
    <string name="error_motor_blocked">Motor Blocked!</string>
    <string name="check_motor_blocked">Check motor and bike transimssion</string>
    <string name="error_torque_sensor">Torque sensor error!</string>
    <string name="check_torque_sensor">Take your feet off the pedals and restart the bike</string>
    <string name="error_low_voltage">Battery low voltage!</string>
    <string name="check_low_voltage">Check battery voltage or battery configuration parameters</string>
    <string name="error_battery_overcurrent">Battery current too High!</string>
    <string name="check_battery_overcurrent">Switch Off the bike and check motor connections</string>
    <string name="error_high_voltage">Battery overvoltage!</string>
    <string name="check_high_voltage">Check battery voltage or battery configuration parameters</string>
    <string name="error_limit_temperature">Warning temperature</string>
    <string name="check_limit_temperature">The motor power is limited</string>
    <string name="error_stop_temperature">Stop temperature!</string>
    <string name="check_stop_temperature">Turn off the motor and wait for it to cool down</string>
    <string name="error_esp32_from_lcd_comm">ESP32 from LCD Error</string>
    <string name="error_esp32_from_controller_comm">ESP32 from Controller Error</string>
    <string name="error_controller_from_esp32_comm">Controller from ESP32 Error</string>
    <string name="comm_error">Communication CRC errors</string>
    <string name="lcd">LCD:</string>
    <string name="controller">Contr.:</string>
    <string name="torque_smooth_pct">Active %:</string>
    <string name="average_adc">Avg:</string>
    <string name="min_adc">Min:</string>
    <string name="max_adc">Max:</string>
    <string name="main_time">Main Loop time</string>
    <string name="ebike_loop">ebike Loop</string>
    <string name="motor_loop">motor Loop</string>
    <string name="irq_time">PWM IRQ time</string>
    <string name="up_irq">Up IRQ</string>
    <string name="down_irq">Down IRQ</string>
    <string name="hall_err">Hall Errors</string>
    <string name="state_err">State Err.</string>
    <string name="seq_err">Seq. Err.</string>
    <string name="dash">-</string>
    <string name="app_name">TSDZ2_ESP32</string>
    <string name="status_data">STATUS DATA</string>
    <string name="debug_data">DEBUG DATA</string>
    <string name="btSetup">Setup Bluetooth</string>
    <string name="motorTest">Motor Test</string>
    <string name="alwaysOn">Screen Always ON</string>
    <string name="espOTA">ESP32 FW update</string>
    <string name="bikeOTA">Bike FW update</string>
    <string name="config">Bike Configuration</string>
    <string name="firmware">Firmware</string>
    <string name="show_version">Show FW versions</string>
    <string name="esp32_config">ESP32 Configuration</string>
    <string name="title_activity_bluetooth_setup">Bluetooth Setup</string>
    <string name="debug">Debug</string>
    <string name="show_debug">View debug info</string>
    <string name="debug_info">Debug info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="fw_versions">FW Versions</string>
    <string name="esp32_fw_version">ESP32 FW version: %s</string>
    <string name="tsdz_fw_version">TSDZ2 FW version: %s</string>
    <string name="choose">Choose</string>
    <string name="selectedDevice">Selected Device</string>
    <string name="discoveredDevices">Discovered Devices</string>
    <string name="scan">Scan</string>
    <string name="noDeviceSelected">No device selected</string>
    <string name="notification_title">Bike Connection</string>
    <string name="speed">Speed</string>
    <string name="cadence">Cadence</string>
    <string name="motor_power">Motor Power</string>
    <string name="pedal_power">Pedal Power</string>
    <string name="battery_current">Battery Current</string>
    <string name="voltage">Battery Volt</string>
    <string name="motor_temp">Motor Temp.</string>
    <string name="energy_used">Energy Used</string>
    <string name="speedField">%.1f Km/h</string>
    <string name="cadenceField">%1$d rmp</string>
    <string name="powerField">%1$d W</string>
    <string name="currentField">%.1f A</string>
    <string name="voltageField">%.1f V</string>
    <string name="temperatureField">%.1f °C</string>
    <string name="whField">%1$d Wh</string>
    <string name="duty_cycle">Duty Cycle</string>
    <string name="motor_erps">Motor ERPS:</string>
    <string name="foc_angle">FOC Angle</string>
    <string name="torque_adc">Torque ADC</string>
    <string name="pedal_torque">Pedal Torque</string>
    <string name="fw_offset">FW offset</string>
    <string name="adc_value">ADC value</string>
    <string name="controller_temp">Controller Temp.</string>
    <string name="fw_hall_offset">FW Hall Offset</string>
    <string name="torque_smoot_pct">Torque smooth %</string>
    <string name="torque_min">Torque Min</string>
    <string name="torque_max">Torque Max</string>
    <string name="torque_avg">Torque Avg</string>
    <string name="esp32_from_ct_err">ESP32 &lt;-CT comm. Error</string>
    <string name="esp32_from_lcd_err">ESP32 &lt;-LCD comm. Error</string>
    <string name="ct_from_esp32_err">CT &lt;-ESP32 comm. Error</string>
    <string name="tsdz_cfg">Bike Configuration</string>
    <string name="title_activity_esp32_ota">Esp32 Firmware Update</string>
    <string name="title_activity_stm8_ota">Bike Firmware Update</string>
    <string name="current_version">Current Version: %1$s</string>
    <string name="new_version">New Version: %1$s</string>
    <string name="file_name">File Name: %1$s</string>
    <string name="start_update">Start Update</string>
    <string name="title_select_file">Select the %1$s file</string>
    <string name="error">Error</string>
    <string name="communicationError">Communication Error</string>
    <string name="fileNotValid">File is not valid</string>
    <string name="address_not_contiguous">non-contiguous addresses</string>
    <string name="wrong_start_address">wrong firmware addresses</string>
    <string name="update_error">Update error!\ncode:%1$d</string>
    <string name="waitingUploadStart">Waiting upload …</string>
    <string name="update_start_procedure">Update start procedure</string>
    <string name="update_start_description">1) Switch off the bike display\n2) Wait some seconds\n3) Switch on the display\n4) Press OK when done</string>
    <string name="rebooting">Rebooting …</string>
    <string name="uploading">Uploading: %1$d%%</string>
    <string name="uploadDone">Upload completed</string>
    <string name="write_init">write initialization …</string>
    <string name="start_programming">Start of programming …</string>
    <string name="stm8_ota_started">OTA Started</string>
    <string name="sync_done">Bootloader Sync done</string>
    <string name="writing">Writing: %1$d%%</string>
    <string name="upgrade_ok">Firmware upgraded</string>
    <string name="stm8_upgrade_message">Bike firmware successfully updated!</string>
    <string name="waitingReboot">ESP32 restarting …</string>
    <string name="rebootDone">ESP32 started!</string>
    <string name="updateError">Update cannot start</string>
    <string name="upload_error">Update error: %1$d</string>
    <string name="warning">Warning</string>
    <string name="exit_warning">OTA in progress!\nConfirm exit?</string>
    <string name="select_file">Select File</string>
    <string name="system">System</string>
    <string name="battery">Battery</string>
    <string name="assist_levels">Assist Levels</string>
    <string name="torque_sensor">Torque Sensor</string>
    <string name="temp_control">Temperature and Throttle</string>
    <string name="hall_calib">Hall calibration</string>
    <string name="title_activity_system_setup">System Setup</string>
    <string name="title_activity_torque_setup">Torque Sensor Setup</string>
    <string name="motor">Motor</string>
    <string name="foc_multiplicator">FOC angle multipl.</string>
    <string name="field_weakening">Field Weakening</string>
    <string name="brake_ignore">Ignore brake signal</string>
    <string name="acceleration">Acceleration</string>
    <string name="max_current">Max current (A)</string>
    <string name="max_power">Max Power (W)</string>
    <string name="sensors">Sensors</string>
    <string name="wheel_cruise">Wheel / Cruise</string>
    <string name="light">Light</string>
    <string name="ligth_config">Lights Configuration</string>
    <string name="assit_wpr">Assist without\npedal rot.</string>
    <string name="torque_adc_step">Torque ADC factor</string>
    <string name="torque_offset_fix">Torque ADC Offset Fix</string>
    <string name="torque_adc_offset">Torque ADC offset</string>
    <string name="torque_smooth">Torque Smooth</string>
    <string name="torque_smooth_min">Min ADC threshold</string>
    <string name="torque_smooth_max">Max ADC diff. threshold</string>
    <string name="threshold">Threshold</string>
    <string name="street_mode">Street Mode</string>
    <string name="cruise_mode_enabled">Cruise mode enabled</string>
    <string name="street_mode_throttle">Throttle enabled</string>
    <string name="wheel_perimeter">Wheel perim. (mm)</string>
    <string name="range_error">Value must be between %1$d and %2$d</string>
    <string name="write_cfg_error">Configuration cannot be updated</string>
    <string name="read_cfg_error">Configuration cannot be readed</string>
    <string name="esp32_cfg_error">ESP32 data wrong\nAndorid app and ESP32 FW misaligned?</string>
    <string name="pairing_error">Pairing failed</string>
    <string name="pairing_done">Pairing done</string>
    <string name="connection_error">Bike is not connected</string>
    <string name="title_activity_battery_setup">Battery Setup</string>
    <string name="cells_nr">Battery cells Nr.</string>
    <string name="wh_reset_volt">Wh counter reset voltage (Vx10)</string>
    <string name="volt_cut_off">Battery low Voltage Cut-Off (Vx10)</string>
    <string name="battery_resist">Battery pack Resistance (mOhm)</string>
    <string name="cell_overvolt">Battery cell Overvolt (mVx10)</string>
    <string name="cell_empty">Battery cell Empty (mVx10)</string>
    <string name="cell_one_bar">Battery cell One bar (mVx10)</string>
    <string name="cell_all_bars">Battery cell All bars (mVx10)</string>
    <string name="title_activity_levels_setup">Assist levels Setup</string>
    <string name="level_error">Assist levels not incremental</string>
    <string name="eMTB_mode">eMTB Mode</string>
    <string name="emtb_assit_level_1">eMTB assist level 1</string>
    <string name="emtb_assit_level_2">eMTB assist level 2</string>
    <string name="emtb_assit_level_3">eMTB assist level 3</string>
    <string name="emtb_assit_level_4">eMTB assist level 4</string>
    <string name="power_mode">Power Mode</string>
    <string name="power_assist_level_1">Power assist level 1</string>
    <string name="power_assist_level_2">Power assist level 2</string>
    <string name="power_assist_level_3">Power assist level 3</string>
    <string name="power_assist_level_4">Power assist level 4</string>
    <string name="torque_mode">Torque Mode</string>
    <string name="torque_assist_level_1">Torque assist level 1</string>
    <string name="torque_assist_level_2">Torque assist level 2</string>
    <string name="torque_assist_level_3">Torque assist level 3</string>
    <string name="torque_assist_level_4">Torque assist level 4</string>
    <string name="cadence_mode">Cadence Mode</string>
    <string name="motorTuning">Motor Tuning</string>
</resources>