<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShowDebugInfo">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/mainDebugView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout">

            <TextView
                android:id="@+id/commErrorTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="4sp"
                android:gravity="center"
                android:text="@string/comm_error" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/lcd" />

                <TextView
                    android:id="@+id/rxlErrorsTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/controller" />

                <TextView
                    android:id="@+id/rxcErrorsTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/mainTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="4sp"
                android:gravity="center"
                android:text="@string/main_time" />

            <LinearLayout
                android:id="@+id/mainTimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/ebike_loop" />

                <TextView
                    android:id="@+id/mainLoopTimeTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />

            </LinearLayout>

            <View
                android:id="@+id/dbg_infoDV1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/pwmTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="4sp"
                android:gravity="center"
                android:text="@string/irq_time" />

            <LinearLayout
                android:id="@+id/pwmTimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/down_irq" />

                <TextView
                    android:id="@+id/pwmDownTimeTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/up_irq" />

                <TextView
                    android:id="@+id/pwmUpTimeTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />
            </LinearLayout>

            <View
                android:id="@+id/dbg_infoDV2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/hallErrTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="4sp"
                android:gravity="center"
                android:text="@string/hall_err" />

            <LinearLayout
                android:id="@+id/hallErrLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:layout_margin="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/state_err" />

                <TextView
                    android:id="@+id/hallStateErrTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="5sp"
                    android:text="@string/seq_err" />

                <TextView
                    android:id="@+id/hallSeqErrTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5sp"
                    android:text="@string/dash" />
            </LinearLayout>


            <View
                android:id="@+id/dbg_infoDV3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10sp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainDebugView">

            <Button
                android:id="@+id/exitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:onClick="onButtonClick"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>